[package]
name = "antsnap"
version = "0.1.0"
authors = ["William Gasper <wkg@williamgasper.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = { version = "1.0.114", features = ["derive"] }
rand = "0.7.3"
rayon = "1.5.0"
logregressor = { git = "https://github.com/wigasper/logregressor", branch = "main" }
clap = "2.33.1"
